# durak-server

./: CMakeLists.txt  cards.c  cards.h  constants.h  game.c  game.h  log.txt  main.c  server.c  server.h  server_init.c  server_init.h  session.c  session.h  struct_server.h
tests/: a.out  game_bot.c
